kie-parent depends on lienzo-core

--- a/.ci/project-dependencies.yaml
+++ b/.ci/project-dependencies.yaml
@@ -8,6 +8,8 @@ dependencies:
       - project: kiegroup/lienzo-core
 
   - project: kiegroup/droolsjbpm-build-bootstrap
+    dependencies:
+      - project: kiegroup/lienzo-core
 
   - project: kiegroup/kie-soup
     dependencies:
