--- a/.github/workflows/pr-backporting.yml
+++ b/.github/workflows/pr-backporting.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: Set target branches
         id: set-targets
-        uses: kiegroup/droolsjbpm-build-bootstrap/.ci/actions/parse-labels@main
+        uses: kiegroup/kie-ci/.ci/actions/parse-labels@main
         with:
           labels: ${LABELS}
   
@@ -35,6 +35,6 @@ jobs:
       fail-fast: true
     steps:
       - name: Backporting
-        uses: kiegroup/droolsjbpm-build-bootstrap/.ci/actions/backporting@main
+        uses: kiegroup/kie-ci/.ci/actions/backporting@main
         with:
           target-branch: ${{ matrix.target-branch }}
