--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,8 @@
     </version.com.ahome-it.lienzo.tooling.nativetools>
     <version.com.ahome-it.lienzo.tooling.common>1.0.190-RELEASE</version.com.ahome-it.lienzo.tooling.common>
     <version.com.allen-sauer.gwt.dnd>3.3.3</version.com.allen-sauer.gwt.dnd>
-    <version.com.fasterxml.jackson>2.12.7</version.com.fasterxml.jackson>
-    <version.com.fasterxml.jackson.databind>2.12.7.1</version.com.fasterxml.jackson.databind>
+    <version.com.fasterxml.jackson>2.15.0</version.com.fasterxml.jackson>
+    <version.com.fasterxml.jackson.databind>${version.com.fasterxml.jackson}</version.com.fasterxml.jackson.databind>
     <version.com.fasterxml.jackson.annotations>${version.com.fasterxml.jackson}</version.com.fasterxml.jackson.annotations>
     <version.com.google.code.gson>2.8.9</version.com.google.code.gson>
     <version.org.jresearch.gwt.time>2.0.3</version.org.jresearch.gwt.time>
@@ -275,7 +275,7 @@
     <version.org.wildfly.client>1.0.1.Final</version.org.wildfly.client>
     <version.org.wildfly.core>17.0.0.Final</version.org.wildfly.core>
     <version.org.wildfly.common>1.5.4.Final</version.org.wildfly.common>
-    <version.org.yaml.snakeyaml>1.32</version.org.yaml.snakeyaml>
+    <version.org.yaml.snakeyaml>2.0</version.org.yaml.snakeyaml>
     <version.org.mozilla.rhino>1.7.13</version.org.mozilla.rhino>
     <version.rome>1.0</version.rome>
     <version.tomcat>9.0.22</version.tomcat>
