fixes for build-chain v3

--- a/.ci/create-push-tags.yaml
+++ b/.ci/create-push-tags.yaml
@@ -1,6 +1,6 @@
 version: "2.1"
 
-dependencies: ./project-dependencies.yaml
+dependencies: ./release-project-dependencies.yaml
 
 pre: |
   export CREATE_TAG_COMMAND=git tag -a ${{ env.KIE_VERSION }} -m tagged_${{ env.KIE_VERSION }}
