--- a/.github/workflows/generate_files.yml
+++ b/.github/workflows/generate_files.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           definition-file: .ci/pull-request-config.yaml
           file-type: repository-list
+          exclude: kiegroup/optaplanner
           output-file-path: ./script/repository-list.txt
       - name: Optaplanner Repository List Generation
         uses: kiegroup/build-chain-files-generator@main
@@ -53,6 +54,7 @@ jobs:
           file-type: repository-list
           output-file-path: ./script/branched-7-repository-list.txt
           include: "@main:7.x"
+          exclude: kiegroup/optaplanner
       - name: Add Changes
         run: git add ./docs/project-dependencies-hierarchy.png ./script/repository-list.txt ./script/branched-7-repository-list.txt
       - name: Archive artifacts
