--- a/kie-user-bom-parent/pom.xml
+++ b/kie-user-bom-parent/pom.xml
@@ -16,7 +16,7 @@
   <packaging>pom</packaging>
   <version>7.75.0-SNAPSHOT</version>
 
-  <name>KIE (Drools, jBPM, OptaPlanner) user BOM parent</name>
+  <name>KIE (Drools, jBPM) user BOM parent</name>
   <description>
     The user BOM parent is used to hold common configuration for all user BOMs. User BOMs can not directly extend
     kie-parent as it brings lots of 3rd party versions in the dependencyManagement which is not desirable for user BOMs.
