--- a/.ci/update-versions-release.yaml
+++ b/.ci/update-versions-release.yaml
@@ -6,29 +6,24 @@ pre: |
   export COMMIT_COMMAND=git commit -am ${{ env.COM_MSG }}
   export CREATE_COMMAND=git checkout -b ${{ env.R_BRANCH }}
   export PUSH_COMMAND=git push origin ${{ env.R_BRANCH }}
-  echo "COMMIT_COMMAND=" ${{ env.COMMIT_COMMAND }}
-  echo "CREATE_COMMAND=" ${{ env.CREATE_COMMAND }}
-  echo "PUSH_COMMAND=" ${{ env.PUSH_COMMAND }}
 default:
   build-command:
     current: |
-      ${{ env.COMMIT_COMMAND }}
       ${{ env.CREATE_COMMAND }}
+      ${{ env.WORKSPACE }}/bc/kiegroup_droolsjbpm-build-bootstrap/script/release/update-versions-build-chain.sh ${{ env.KIE_VERSION }}
+      ${{ env.COMMIT_COMMAND }}
       ${{ env.PUSH_COMMAND }}
 build:
   - project: kiegroup/lienzo-core
     build-command:
       before:
-        current: |
-          echo "RELEASE_BRANCH= " ${{ env.R_BRANCH }}
-          echo "BASE_BRANCH= " ${{ env.B_BRANCH }}
-          echo "R_BRANCH_EXIST= " ${{ env.R_BRANCH_EXIST }}
-          echo "CHECKOUT_BRANCH= " ${{ env.CHECKOUT_BRANCH }}
+        current:
           ${{ env.WORKSPACE }}/bc/kiegroup_droolsjbpm-build-bootstrap/script/release/eraseM2.sh ${{ env.MAVEN_DIR }}
-          ${{ env.WORKSPACE }}/bc/kiegroup_droolsjbpm-build-bootstrap/script/release/update-versions-build-chain.sh ${{ env.KIE_VERSION }} community
+  - project: kiegroup/kie-docs
+    build-command:
       current: |
-        ${{ env.COMMIT_COMMAND }}
         ${{ env.CREATE_COMMAND }}
+        ${{ env.WORKSPACE }}/bc/kiegroup_droolsjbpm-build-bootstrap/script/release/updateVersionsBuildChain.sh ${{ env.KIE_VERSION }}
+        ${{ env.COMMIT_COMMAND }}
         ${{ env.PUSH_COMMAND }}
-
 
