--- a/kie-bom/pom.xml
+++ b/kie-bom/pom.xml
@@ -147,12 +147,12 @@
       <dependency>
         <groupId>org.kie.server</groupId>
         <artifactId>kie-server-services-optaplanner</artifactId>
-        <version>${version.org.kie}</version>
+        <version>${version.org.optaplanner}</version>
       </dependency>
       <dependency>
         <groupId>org.kie.server</groupId>
         <artifactId>kie-server-services-optaplanner</artifactId>
-        <version>${version.org.kie}</version>
+        <version>${version.org.optaplanner}</version>
         <classifier>sources</classifier>
       </dependency>
       <dependency>
@@ -301,12 +301,12 @@
       <dependency>
         <groupId>org.kie.server</groupId>
         <artifactId>kie-server-rest-optaplanner</artifactId>
-        <version>${version.org.kie}</version>
+        <version>${version.org.optaplanner}</version>
       </dependency>
       <dependency>
         <groupId>org.kie.server</groupId>
         <artifactId>kie-server-rest-optaplanner</artifactId>
-        <version>${version.org.kie}</version>
+        <version>${version.org.optaplanner}</version>
         <classifier>sources</classifier>
       </dependency>
       <dependency>
@@ -2784,7 +2784,7 @@
       <dependency>
         <groupId>org.kie</groupId>
         <artifactId>kie-server-spring-boot-starter-optaplanner</artifactId>
-        <version>${version.org.kie}</version>
+        <version>${version.org.optaplanner}</version>
       </dependency>
       <dependency>
         <groupId>org.kie</groupId>
