--- a/kie-user-bom-parent/pom.xml
+++ b/kie-user-bom-parent/pom.xml
@@ -50,6 +50,7 @@
   <properties>
     <version.org.kie>${project.version}</version.org.kie>
     <version.org.kie.lienzo>${version.org.kie}</version.org.kie.lienzo>
+    <version.org.optaplanner>7.73.0.Final</version.org.optaplanner>
     <jboss.releases.repo.url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</jboss.releases.repo.url>
     <jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>
   </properties>
