remove reference to kiegroup/optaplanner in .ci/product-projects-dependencies.yaml

--- a/.ci/product-projects-dependencies.yaml
+++ b/.ci/product-projects-dependencies.yaml
@@ -11,7 +11,7 @@ dependencies:
 
   - project: jboss-integration/rhba-boms
     dependencies:
-        - project: kiegroup/optaplanner
+        - project: kiegroup/drools-wb
 
   - project: jboss-integration/rhba
     dependencies:
