org.bouncycastle.bcp.*-jdk15on to org.bouncycastle.bcp.*-jdk15to18

--- a/pom.xml
+++ b/pom.xml
@@ -6441,19 +6441,19 @@
       <!-- Used by jgit -->
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk15on</artifactId>
+        <artifactId>bcprov-jdk15to18</artifactId>
         <version>${version.org.bouncycastle}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>bcpkix-jdk15on</artifactId>
+        <artifactId>bcpkix-jdk15to18</artifactId>
         <version>${version.org.bouncycastle}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>bcpg-jdk15on</artifactId>
+        <artifactId>bcpg-jdk15to18</artifactId>
         <version>${version.org.bouncycastle}</version>
         <scope>test</scope>
       </dependency>
